--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,19 @@
-server:
-  port: 8012
 spring:
   cloud:
     gateway:
       routes:
         - id: path_route
-          uri: https://yupi.icu
+          uri: http://localhost:8123
           predicates:
             - Path=/api/**
+  application:
+    name: yy-api-gateway
+server:
+  port: 8012
 logging:
   level:
-    root: TRACE
+    root: DEBUG
+dubbo:
+  registry:
+    address: nacos://localhost:8848
+    register-mode: instance
