--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 spring:
   cloud:
     gateway:
+      httpclient:
+        connect-timeout: 10000
+        response-timeout: 30s
       routes:
         - id: path_route
-          uri: http://localhost:8123
+          uri: http://localhost:8101
           predicates:
             - Path=/api/**
   application:
