docs 将签名改成 路径 + path + sk组成

--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.yy</groupId>
+            <groupId>io.github.ydfyv</groupId>
             <artifactId>yy-api-common</artifactId>
-            <version>1.0</version>
+            <version>0.0.2</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
